--- a/package.json
+++ b/package.json
@@ -21,21 +21,23 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/http": "^4.20.0",
+    "@ionic-native/native-audio": "^4.20.0",
     "@ionic-native/screen-orientation": "^4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic-native/toast": "^4.20.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "8.1.0",
-    "cordova-plugin-advanced-http": "^2.4.0",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-advanced-http": "^2.4.1",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-screen-orientation": "^3.0.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-toast": "^2.7.2",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.9",
@@ -45,7 +47,7 @@
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.4",
+    "@ionic/app-scripts": "^3.2.3",
     "typescript": "2.6.2"
   },
   "description": "An Ionic project",
@@ -55,13 +57,16 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
       },
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-x-toast": {}
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "android"
