--- a/package.json
+++ b/package.json
@@ -27,19 +27,20 @@
     "@ionic-native/status-bar": "4.20.0",
     "@ionic-native/toast": "^4.20.0",
     "@ionic/storage": "2.2.0",
-    "cordova-android": "8.1.0",
-    "cordova-plugin-advanced-http": "^2.4.1",
+    "angularfire2": "5.0.0-rc.3",
+    "cordova-plugin-advanced-http": "^2.5.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-screen-orientation": "^3.0.2",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-toast": "^2.7.2",
     "es6-promise-plugin": "^4.2.2",
+    "firebase": "4.6.0",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -48,7 +49,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.3",
-    "typescript": "2.6.2"
+    "cordova-android": "^8.1.0",
+    "typescript": "^2.7.2"
   },
   "description": "An Ionic project",
   "cordova": {
